--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -21,6 +21,7 @@
             android:id="@+id/icon"
             android:layout_width="200dp"
             android:layout_height="250dp"
+            android:paddingTop="95dp"
             android:contentDescription="@string/desc_firebase_lockup"
             android:src="@drawable/googleg_standard_color_18"
             app:srcCompat="@drawable/googleg_standard_color_18"
@@ -33,7 +34,7 @@
             android:layout_marginBottom="10dp"
             android:paddingTop="30dp"
             android:text="@string/emailpassword_title_text"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:theme="@style/ThemeOverlay.MyTitleText" />
 
     </LinearLayout>
@@ -43,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/white"
+        android:background="@color/black"
         android:gravity="center_vertical">
 
         <LinearLayout
@@ -64,8 +65,8 @@
                 android:background="@drawable/fui_idp_button_background_email"
                 android:drawableStart="@android:drawable/sym_action_email"
                 android:gravity="center_vertical"
-                android:paddingLeft="30dip"
-                android:paddingRight="35dip"
+                android:paddingLeft="30dp"
+                android:paddingRight="35dp"
                 android:singleLine="true"
                 android:text="@string/sign_in_email"
                 android:textAlignment="center"
