--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,6 +4,13 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
+        android:textColor="@color/white"
         android:title="@string/action_settings"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_signout"
+        android:orderInCategory="100"
+        android:textColor="@color/white"
+        android:title="@string/menu_sign_out"
         app:showAsAction="never" />
 </menu>
