--- a/app/src/main/res/layout/fragment_create_community.xml
+++ b/app/src/main/res/layout/fragment_create_community.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.CreateCommunity.CreateCommunity">
+    tools:context=".ui.CreateCommunity.CreateCommunityFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" tools:layout_editor_absoluteY="0dp"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
+        tools:layout_editor_absoluteY="0dp">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
@@ -20,7 +20,7 @@
             android:background="@color/colorAccent"
             android:fitsSystemWindows="true"
             app:elevation="0dip"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
 
         <ScrollView
@@ -35,7 +35,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/communityImage"
                     android:layout_width="match_parent"
                     android:layout_height="202dp"
                     android:src="@mipmap/ic_launcher_foreground"
@@ -43,7 +43,7 @@
                     tools:srcCompat="@mipmap/ic_launcher_foreground" />
 
                 <TextView
-                    android:id="@+id/titleText"
+                    android:id="@+id/communityTitleText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -63,6 +63,7 @@
                     app:shapeAppearance="@style/Rounded">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/communityName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -79,16 +80,34 @@
                     app:shapeAppearance="@style/Rounded">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/communityDescription"
                         android:layout_width="match_parent"
                         android:layout_height="113dp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <Button
-                    android:id="@+id/community_photo"
+                <TextView
+                    android:id="@+id/spinnerText"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:text="@string/community_spinner_text"
+                    android:textColor="@color/black"
+                    android:theme="@style/ThemeOverlay.MyTitleText" />
+                
+                <Spinner
+                    android:id="@+id/spCategories"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_margin="8dp"
+                    android:entries="@array/categories"/>
+
+                <Button
+                    android:id="@+id/create_community_button"
+                    android:layout_width="match_parent"
                     android:layout_height="50dp"
+                    android:layout_margin="8dp"
                     android:text="Create Community"
                     android:textAlignment="center"
                     android:textAllCaps="false"
@@ -98,10 +117,10 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
-                    android:id="@+id/create_community_button"
+                    android:id="@+id/set_community_image_button"
                     android:layout_width="match_parent"
-                    android:layout_margin="8dp"
                     android:layout_height="50dp"
+                    android:layout_margin="8dp"
                     android:text="Upload Community Photo"
                     android:textAlignment="center"
                     android:textAllCaps="false"
