--- a/app/src/main/res/layout/fragment_communities.xml
+++ b/app/src/main/res/layout/fragment_communities.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/communitiesRecyclerView"
+            android:id="@+id/recyclerView"
             android:layout_width="399dp"
             android:layout_height="601dp"
             android:layout_marginTop="116dp"
