--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.users.UsersFragment">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/UsersRecyclerView"
             android:layout_width="399dp"
             android:layout_height="601dp"
             app:layout_constraintBottom_toBottomOf="parent"
