--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,6 +21,10 @@
             android:icon="@drawable/ic_communities"
             android:title="@string/menu_communities" />
         <item
+            android:id="@+id/nav_yourCommunities"
+            android:icon="@drawable/ic_communities"
+            android:title="@string/menu_yourCommunities" />
+        <item
             android:id="@+id/sign_out"
             android:icon="@drawable/ic_sign_out"
             android:title="@string/menu_sign_out" />
