--- a/app/src/main/res/layout/community_card.xml
+++ b/app/src/main/res/layout/community_card.xml
@@ -2,8 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="85dp"
+    android:layout_height="195dp"
     android:layout_margin="5dp"
     android:clickable="true"
     android:focusable="true"
@@ -12,28 +13,28 @@
     app:cardElevation="10dp">
 
     <RelativeLayout
-        android:id="@+id/report_layout"
+        android:id="@+id/community_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
+        android:padding="16dp"
+        tools:layout_editor_absoluteX="82dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <ImageView
             android:id="@+id/imageview_community_picture"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="121dp"
+            android:layout_height="123dp"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="16dp"
+            android:layout_alignParentEnd="true"
             app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/communityName"
             android:layout_width="212dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:layout_below="@id/imageview_community_picture"
+            android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="94dp"
-            android:layout_toEndOf="@id/imageview_community_picture"
             android:textColor="@color/black" />
 
         <TextView
@@ -41,10 +42,9 @@
             android:layout_width="212dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/communityName"
+            android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="14dp"
-            android:layout_marginEnd="80dp"
-            android:layout_toEndOf="@id/imageview_community_picture"
+
             android:textColor="@color/black" />
 
 
