--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -30,7 +30,7 @@
         tools:layout="@layout/fragment_communities" />
     <fragment
         android:id="@+id/nav_yourCommunities"
-        android:name="ie.conorcasey.sharido.ui.YourCommunities.YourCommunitiesFragment"
+        android:name="ie.conorcasey.sharido.ui.yourCommunities.YourCommunitiesFragment"
         android:label="@string/menu_yourCommunities"
         tools:layout="@layout/fragment_communities" />
 
