Create category functionality and ui tweaks

--- a/app/src/main/res/layout/fragment_communities.xml
+++ b/app/src/main/res/layout/fragment_communities.xml
@@ -7,7 +7,7 @@
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh"
         android:layout_width="409dp"
-        android:layout_height="716dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -16,7 +16,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/communitiesRecyclerView"
             android:layout_width="399dp"
-            android:layout_height="601dp"
+            android:layout_height="match_parent"
             android:layout_marginTop="116dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
