--- a/app/src/main/res/layout/community_card.xml
+++ b/app/src/main/res/layout/community_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -35,6 +35,7 @@
             android:layout_below="@id/imageview_community_picture"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
+            android:gravity="center"
             android:textColor="@color/black" />
 
         <TextView
@@ -44,10 +45,11 @@
             android:layout_below="@id/communityName"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
+            android:gravity="center"
 
             android:textColor="@color/black" />
 
 
     </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
