--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,12 +22,17 @@
         android:name="ie.conorcasey.sharido.ui.CreateCommunity.CreateCommunityFragment"
         android:label="@string/menu_create_communities"
         tools:layout="@layout/fragment_create_community" />
-
     <fragment
         android:id="@+id/nav_communities"
         android:name="ie.conorcasey.sharido.ui.communities.CommunitiesFragment"
         android:label="@string/menu_communities"
         tools:layout="@layout/fragment_communities" />
+
+    <fragment
+        android:id="@+id/nav_community_categories"
+        android:name="ie.conorcasey.sharido.ui.communityCategories.CommunityCategories"
+        android:label="@string/menu_community_categories"
+        tools:layout="@layout/community_categories" />
     <fragment
         android:id="@+id/nav_yourCommunities"
         android:name="ie.conorcasey.sharido.ui.yourCommunities.YourCommunitiesFragment"
